Add user registration endpoints for CLIENT and MANAGER roles and refactor token handling